# pwnit

./: .gitignore  README.md  features.txt  pyproject.toml
pwnit/resources/: config.yml
resources/: config.schema.json  config.yml  schema.json  template.py
src/pwnit/: args.py  config.py  exe.py  file_manage.py  interactions.py  main.py  utils.py
src/spwn/: args.py  binary.py  commands.py  config.py  exe.py  file_manage.py  interactions.py  libc.py  loader.py  main.py  placeholders.py  template.py  utils.py
